# OpenCamera

./: .gitignore  .gn  BUILD.gn  DEPS  README.md  opencamera.gni
api/: BUILD.gn
api/audio/: audio_device.cc  audio_device.h  audio_frame.cc  audio_frame.h  audio_sink_interface.h  default_audio_device.cc  default_audio_device.h
api/audio_codecs/: BUILD.gn  audio_encoder.h  audio_encoder_factory.h  builtin_audio_encoder_factory.cc  builtin_audio_encoder_factory.h
api/video/: BUILD.gn  encoded_image.cc  encoded_image.h  i420_buffer.cc  i420_buffer.h  nv12_buffer.cc  nv12_buffer.h  video_frame.cc  video_frame.h  video_frame_buffer.cc  video_frame_buffer.h  video_frame_type.h  video_processor_interface.h  video_sink_interface.h  video_source_interface.h  video_stream_encoder_interface.h  yuyv_buffer.cc  yuyv_buffer.h
api/video/test/: BUILD.gn  nv12_buffer_unittest.cc
api/video_codecs/: BUILD.gn  builtin_video_encoder_factory.cc  builtin_video_encoder_factory.h  fake_video_encoder_factory.cc  fake_video_encoder_factory.h  video_encoder.cc  video_encoder.h  video_encoder_config.cc  video_encoder_config.h  video_encoder_factory.h  video_encoder_interface.h
app/: BUILD.gn  app_config.h  conductor.cc  conductor.h  main.cc
build_overrides/: build.gni
data/: open_camera.ini
media/: BUILD.gn  camera_info.cc  default_video_source_factory.h  file_sink.cc  file_sink.h  hybird_worker.cc  hybird_worker.h  media_service.cc  media_service.h  media_stream.h  media_transport.cc  media_transport.h  media_worker.h  motion_detector.cc  motion_detector.h  v4l2_video_source.cc  v4l2_video_source.h  v4l2_video_source_factory.cc  video_broadcaster.h  video_capturer.cc  video_capturer.h  video_processor.h  video_send_stream.cc  video_send_stream.h  video_sink.h  video_sink_wrapper.cc  video_source_base.h  video_stream_encoder.cc  video_stream_encoder.h  video_stream_helper.cc  video_stream_helper.h  video_stream_sender.cc  video_stream_sender.h  video_stream_sender_interface.h
media/audio/: audio_flinger.cc  audio_flinger.h  audio_send_stream.cc  audio_send_stream.h  audio_sink_wrapper.cc  audio_sink_wrapper.h  audio_stream_sender.cc  audio_stream_sender.h  remix_resample.cc  remix_resample.h
media/camera_info/: camera_info.cc  default_video_source_factory.h  v4l2_video_source.cc  v4l2_video_source.h  v4l2_video_source_factory.cc  video_source_factory.h
media/test/: BUILD.gn  video_capturer_unittest.cc
media/video/: file_sink.h  v4l2_video_source.cc  v4l2_video_source.h  video_broadcaster.h  video_capturer.cc  video_capturer.h  video_processor.h  video_send_stream.cc  video_send_stream.h  video_sink_wrapper.cc  video_sink_wrapper.h  video_source_base.h  video_stream_encoder.cc  video_stream_encoder.h  video_stream_helper.cc  video_stream_helper.h  video_stream_sender.cc  video_stream_sender.h  video_stream_sender_interface.h
modules/audio/: audio_mixer.cc  audio_mixer.h  audio_resampler.cc  audio_resampler.h
modules/audio_coding/: BUILD.gn
modules/audio_coding/codecs/aac/: fdkaac_encoder.cc  fdkaac_encoder.h
modules/audio_device/: BUILD.gn  audio_device_buffer.cc  audio_device_buffer.h  audio_device_config.h  audio_device_defines.h  audio_device_generic.h
modules/audio_device/linux/: alsasymboltable_linux.cc  alsasymboltable_linux.h  audio_device_alsa_linux.cc  audio_device_alsa_linux.h  audio_mixer_manager_alsa_linux.cc  audio_mixer_manager_alsa_linux.h  latebindingsymboltable_linux.cc  latebindingsymboltable_linux.h
modules/audio_device/linux/test/: alsa.cc
modules/video_coding/: BUILD.gn
modules/video_coding/codecs/h264/: h264.cc  h264.h  openh264_encoder.cc  openh264_encoder.h
onvif/: BUILD.gn  onvif_device_binding_service.cc  onvif_device_binding_service.h  onvif_media_binding_service.cc  onvif_media_binding_service.h  onvif_ptz_binding_service.cc  onvif_ptz_binding_service.h  onvif_server.cc  onvif_server.h
rtsp/: BUILD.gn  h264_file_source.cc  h264_file_source.h  rtsp_server.cc  rtsp_server.h
test/: BUILD.gn  frame_utils.cc  frame_utils.h  test_main.cc  test_main_lib.cc  test_main_lib.h
