import("//opencamera.gni")

group("app") {
  deps = [
    ":oc",
    ":somnus",
  ]
}

oc_library("oc") {
  sources = [
    "app_config.h",
    "conductor.cc",
    "conductor.h",
  ]
  deps = [
    "//base:logging",
    "//common:foundation",
    "//onvif:onvifserver",
    "//rtsp:rtspserver",
  ]

  public_deps = [ "//third_party/inih" ]
}

executable("somnus") {
  sources = [ "main.cc" ]
  deps = [
    ":oc",
    "//base:logging",
  ]
}
