import("//opencamera.gni")

group("app") {
  deps = [
    ":oc",
    ":somnus",
  ]
}

oc_library("oc") {
  sources = [
    "app_config.h",
    "conductor.cc",
    "conductor.h",
  ]
  deps = [
    "//base:logging",
    "//common:foundation",
    "//media:media_video",
    "//onvif:onvifserver",
    "//rtsp:h264_file_source",
  ]
  public_deps = [
    "//rtsp:rtspserver",
    "//third_party/inih",
  ]
}

executable("somnus") {
  sources = [ "main.cc" ]
  deps = [
    ":oc",
    "//base:logging",
  ]
}
