import("//opencamera.gni")

group("app") {
  deps = [
    ":DyrachYO",
    ":oc",
  ]
}

oc_library("oc") {
  sources = [
    "app_config.h",
    "conductor.cc",
    "conductor.h",
  ]
  deps = [
    "//base:logging",
    "//common:foundation",
    "//media:media_service",
    "//onvif:onvifserver",
    "//rtsp:h264_file_source",
  ]
  public_deps = [
    "//rtsp:rtspserver",
    "//third_party/inih",
  ]
  configs += [ "//build/config/compiler:rtti" ]
}

executable("DyrachYO") {
  sources = [ "main.cc" ]
  deps = [
    ":oc",
    "//base:logging",
  ]
}
