import("//opencamera.gni")

group("rtsp") {
  testonly = true
  deps = [ ":rtspserver" ]
}

oc_library("rtspserver") {
  testonly = true
  sources = [
    "rtsp_server.cc",
    "rtsp_server.h",
  ]
  deps = [ "//common" ]
  public_deps = [ "//third_party/rtsp_server" ]
}

oc_library("h264_file_source") {
  testonly = true
  sources = [
    "h264_file_source.cc",
    "h264_file_source.h",
  ]
  deps = [ "//common" ]
}
