import("//opencamera.gni")

group("rtsp") {
  deps = [ ":rtspserver" ]
}

oc_library("rtspserver") {
  sources = [
    "rtsp_server.cc",
    "rtsp_server.h",
  ]

  # shared_ptr<MediaSource> dynamic_pointer_cat needs RTTI
  configs += [ "//build/config/compiler:rtti" ]

  deps = [ "//common" ]

  public_deps = [ "//third_party/rtsp_server" ]
}

oc_library("h264_file_source") {
  sources = [
    "h264_file_source.cc",
    "h264_file_source.h",
  ]
  deps = [ "//common" ]

  # shared_ptr<MediaSource> dynamic_pointer_cat needs RTTI
  configs += [ "//build/config/compiler:rtti" ]
}
