import("//opencamera.gni")

oc_library("video_frame") {
  visibility = [ "*" ]

  sources = [
    "i420_buffer.cc",
    "i420_buffer.h",
    "nv12_buffer.cc",
    "nv12_buffer.h",
    "video_frame.cc",
    "video_frame.h",
    "video_frame_buffer.cc",
    "video_frame_buffer.h",
    "video_sink_interface.h",
    "video_source_interface.h",
  ]
  deps = [
    "//base/memory:aligned_malloc",
    "//third_party/libyuv",
  ]
}

if (avp_include_test) {
  oc_library("video_unittests") {
    testonly = true
  }
}
